<resources>
    <string name="app_name">Chat app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_signup">Login / Sign up</string>
    <string name="agreement">By signing up, you agree to the terms of Service and Privacy Policy, including Cookie Use.         Others will be able to find you by searching for your email address or phone number when provided.</string>
    <string name="new_message">Start new message</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
</resources>
