<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bito.chatexam.MainActivity">

    <TextView
        android:id="@+id/textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/fontColor"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:textSize="24sp"
        android:gravity="center"/>

    <View
        android:id="@+id/viewId"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#D9E0E5"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textId"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameContainerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewId"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:layout_marginTop="32dp">

        <EditText
            android:id="@+id/emailEditId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:hint="@string/email"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordContainerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameContainerId"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/passwordEditId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:padding="16dp"
            android:hint="@string/password"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agreement"
        android:padding="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/submit"
        />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:textColor="@color/buttonColor"
        android:text="@string/login_signup"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/passwordContainerId"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
