<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bito.chatexam.ChatActivity">

    <TextView
        android:id="@+id/textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/fontColor"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/buttonColor"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="258dp"
        android:textSize="12sp"
        android:gravity="center"
        android:padding="8dp"
        android:background="@drawable/logout_button_rounded"/>

    <View
        android:id="@+id/viewId"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#D9E0E5"
        android:paddingBottom="8dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textId"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/activity_vertical_margin_lg"
        android:layout_marginBottom="80dp"
        android:dividerHeight="16dp"
        android:divider="@android:color/transparent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll">
    </ListView>

    <RelativeLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#D9E0E5"
            android:paddingBottom="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:layout_above="@+id/chatText"/>

        <EditText
            android:id="@+id/chatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:padding="8dp"
            android:hint="@string/new_message"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/buttonSend" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/buttonSend"
            android:textColor="@color/buttonColor"
            android:layout_alignBottom="@+id/chatText"
            android:layout_alignParentRight="true"
            android:background="@drawable/logout_button_rounded"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</RelativeLayout>
